<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8C2FA"
    tools:context=".views.splash.TmdbSplashActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_online_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splash_tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_video"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="The Popular\nMovies App"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splash_tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="TMDB Demo"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splash_tv_heading" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_offline_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splash_tv_network_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_offline_network"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/offline_network_error_heading"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/splash_tv_offline_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:paddingHorizontal="30dp"
            android:text="@string/offline_network_content"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splash_tv_network_error" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_offline_mode"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rect_blue_btn"
            android:paddingHorizontal="10dp"
            android:text="@string/text_offline_mode"
            android:textColor="@color/tabs_text_icon"
            app:layout_constraintEnd_toEndOf="@+id/splash_tv_offline_content"
            app:layout_constraintStart_toStartOf="@+id/splash_tv_offline_content"
            app:layout_constraintTop_toBottomOf="@+id/splash_tv_offline_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>