<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".views.movie_detailed_view.MovieDetailedViewFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rect_white"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/img_movie_thumbnail_cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_movie_thumbnail"
                    android:layout_width="170dp"
                    android:layout_height="255dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_overview_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/overview_text"
                android:textAlignment="textStart"
                android:textColor="@color/light_blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_movie_thumbnail_cardView" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_overview_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview_text" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_movie_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_movie_thumbnail_cardView"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="textStart"
                    android:textColor="@color/tabs_text_icon"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_language_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/language_text"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_language_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_movie_language_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_movie_language_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_movie_language_text"

                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_rating_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/rating_text"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_language_value" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_rating_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_movie_rating_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_movie_rating_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_movie_rating_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_release_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/release_date_text"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_rating_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_movie_release_date_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="sans-serif-medium"
                    android:textAlignment="textStart"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_movie_release_date_text"
                    app:layout_constraintStart_toEndOf="@+id/tv_movie_release_date_text"
                    app:layout_constraintTop_toTopOf="@+id/tv_movie_release_date_text" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>